--- a/_stylus/styles.styl
+++ b/_stylus/styles.styl
@@ -128,7 +128,7 @@ HEADER
 .m-navbar__brand
 	width 6.125rem //98px
 	height 2.5rem //40px
-	background url(../img/logo-white.png) no-repeat center center/contain
+	background url(/bulksales/assets/images/logo-white.png) no-repeat center center/contain
 	text-indent -9999px
 	position relative
 	top 0
@@ -138,7 +138,7 @@ HEADER
 		height 1.5rem //24px
 
 .m-navbar__brand--inverse
-	background url(../img/logo-black.png) no-repeat center center/contain
+	background url(/bulksales/assets/images/logo-black.png) no-repeat center center/contain
 	@media (max-width:$breakpoint-sm)
 		width 3.6875rem //59px
 		height 1.5rem //24px
