--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
       <a class="bd-toc-link mt-0" href="api-services-description.html">API Services Description</a>
       <ul class="nav bd-sidenav">
         <li class="active bd-sidenav-active">
-          <a href="{% post_url 2019-05-24-generate-wso2-access-token %}">Generate WSO2 Access Token</a>
+          <a href="{{ '/docs/2019-05-24-generate-wso2-access-token/' | relative_url }}">Generate WSO2 Access Token</a>
         </li>
         <li>
           <a class="bd-list-collapse collapsed" data-toggle="collapse" href="#upload-files" role="button" aria-expanded="false" aria-controls="upload-files">Upload Files</a>
