--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 							</button>
 						</div>
 						<div class="m-navbar__title offset-lg-3 mr-auto mr-lg-0">
-							<p class="text-base-light mb-2 mb-lg-0">BulkSales Services</p>
+							<p class="text-base-light mb-2 mb-lg-0">BuuuulkSales Services</p>
 						</div>
 						<div class="d-flex align-items-center">
 							<a href="#" id="show-search-box" class="btn btn-link"><img src="/bulksales/assets/images/icons/icon-search.svg" width="19" height="19" alt=""><span class="d-none d-lg-inline-block">&nbsp;Buscar</span></a>
