--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,5 +18,5 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="{{ "css/styles.css" | absolute_url }}">
+  <link rel="stylesheet" href="{{ "/bulksales/css/styles.css" | absolute_url }}">
 </head>
