--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>{{ page.title }} - {{ site.title }}</title>
 	<meta name="description" content="{{ page.description }}">
-	<link rel="icon" type="image/x-icon" href="./img/favicons/favicon.ico">
+	<!--<link rel="icon" type="image/x-icon" href="./img/favicons/favicon.ico">-->
+
 	<link rel="apple-touch-icon" sizes="144x144" href="./img/favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
